# Casimir

./: .gitignore  CMakeLists.txt  CMakeSettings.json
.github/workflows/: macos-test.yml  ubuntu-test.yml  windows-test.yml
casimir/: CMakeLists.txt  configuration.h.in  configuration.hpp.in
casimir/include/casimir/: casimir.hpp  configuration.hpp
casimir/src/casimir/: casimir.cpp  casimir.hpp  configuration.hpp
casimir/src/casimir/core/: context.cpp  context.hpp  heap_allocator.cpp  heap_allocator.hpp  heap_interface.cpp  heap_interface.hpp  private-context.cpp  private-context.hpp
casimir/src/casimir/framework/: allocator.cpp  allocator.hpp  contextual_object.cpp  contextual_object.hpp  datachunk.cpp  datachunk.hpp  dataobject.cpp  dataobject.hpp  datatype.cpp  datatype.hpp  indexable.cpp  indexable.hpp  interface.cpp  interface.hpp  tensor_shape.cpp  tensor_shape.hpp
casimir/src/casimir/utilities/: cmutex.cpp  cmutex.hpp  exception.cpp  exception.hpp  logger.cpp  logger.hpp  optional.hpp  string.cpp  string.hpp  string_serializable.hpp  uuid.cpp  uuid.hpp
cmake/: prepend.cmake  version.cmake
docs/: CMakeLists.txt  Doxyfile.in
test/: CMakeLists.txt  context_test.cpp  main_test.cpp
test/core/: heap_test.cpp
test/framework/: datachunk_test.cpp  dataobject_test.cpp  datatype_test.cpp  tensorshape_test.cpp
test/utilities/: string_test.cpp  uuid_test.cpp
